--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=servicio-items
 server.port=8080
 
-servicio-productos.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
+# servicio-productos.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
