--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=servicio-items
-server.port=8080
+server.port=${PORT:0}
 
-# servicio-productos.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
-
+# Se registra el servicio ante el server de eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+# Se configura el tiempo de espera para el manejo de errores en Hystrix
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 15000
+#ribbon.ConnectTimeout: 3000
+#ribbon.ReadTimeout: 10000
