--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-# Se configura el tiempo de espera para el manejo de errores en Hystrix
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 15000
+# Se configura el tiempo de espera {timeout} para Hystrix y Ribbon
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
 #ribbon.ConnectTimeout: 3000
-#ribbon.ReadTimeout: 10000
+#ribbon.ReadTimeout: 5000
